Ensure words wrap for titles

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -27,6 +27,15 @@
   }
 }
 
+h1,
+h2,
+h3,
+h4 {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
 .hero {
   height: 100vh;
   display: flex;
